# teal-agents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT_DEVELOPMENT.md  AGENT_TEMPLATE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  LICENSES_THIRD_PARTY  Makefile  README.md  SECURITY_ASSESSMENT.md  TESTING_GUIDE.md  ao-services.Dockerfile  ao.Dockerfile  check_keras_version.py  co.Dockerfile  cve_2025_9905_fix.py  docker-compose.yaml  final_vulnerability_status.py  go.mod  go.sum  keras_security_hardening.py  sk-agents.Dockerfile  tasks.md  teal-agents.Dockerfile  test.html
shared/ska_utils/: Makefile  pyproject.toml
shared/ska_utils/src/ska_utils/: __about__.py  __init__.py  app_config.py  keepalive_executor.py  logger.py  module_loader.py  redis_streams_event_handler.py  redis_streams_event_publisher.py  singleton.py  standardized_dates.py  strtobool.py  telemetry.py
shared/ska_utils/tests/: test_app_config.py  test_keepalive_executor.py  test_module_loader.py  test_redis_streams_event_handler.py  test_redis_streams_event_publisher.py  test_standardized_dates.py  test_strtobool.py  test_telemetry.py
src/orchestrators/assistant-orchestrator/orchestrator/: .env.example  .gitignore  .merck.yaml  Makefile  README.md  __init__.py  agents.py  ao.sh  configs.py  connection_manager.py  context_directive.py  conversation_manager.py  jose.py  jose_types.py  pyproject.toml  recipient_chooser.py
src/orchestrators/assistant-orchestrator/orchestrator/conf/: config.yaml
src/orchestrators/assistant-orchestrator/orchestrator/model/: __init__.py  conversation.py  requests.py
src/orchestrators/assistant-orchestrator/orchestrator/routes/: apis.py  deps.py  sse.py  websockets.py
src/orchestrators/assistant-orchestrator/orchestrator/services/: __init__.py  external_services_client.py  internal_services_client.py  new_client.py  services_client.py
src/orchestrators/assistant-orchestrator/orchestrator/session/: __init__.py  in_memory_session_manager.py  redis_session_manager.py  session_manager.py
src/orchestrators/assistant-orchestrator/orchestrator/tests/: test_agents.py  test_apis.py  test_conversation_manager.py  test_recipient_chooser.py
src/orchestrators/assistant-orchestrator/orchestrator/user_context/: __init__.py  custom_user_context_helper.py  in_memory_context.py
src/orchestrators/assistant-orchestrator/services/: .example.env  .gitignore  Makefile  README.md  configs.py  pyproject.toml  ska_services.py
src/orchestrators/assistant-orchestrator/services/auth/: README.md  __init__.py  authenticator.py  custom_auth_helper.py  user_id_only_authenticator.py
src/orchestrators/collab-orchestrator/orchestrator/: .env.example  .gitignore  Makefile  README.md  co.env.example  co.sh  pyproject.toml
src/orchestrators/group-orchestrator/orchestrator/: pyproject.toml
src/orchestrators/workflow-orchestrator/orchestrator/: README.md  compose.yaml  pyproject.toml
src/sk-agents/: .gitattributes  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  sk_agents.sh
src/sk-agents/dapr/components/: pubsub.yaml  statestore.yaml  tracing.yaml
src/sk-agents/demos/01_getting_started/: README.md  config.yaml
src/sk-agents/demos/02_input_output/: README.md  config.yaml  custom_types.py
src/sk-agents/demos/03_plugins/: README.md  config.yaml  custom_plugins.py
src/sk-agents/demos/04_remote_plugins/: README.md  config.yaml  openapi_geonames.json  openapi_weather.json  remote-plugin-catalog.yaml
src/sk-agents/demos/05_deployment/: README.md  compose.yaml
src/sk-agents/demos/06_deployment_github/: README.md  compose.yaml  example.env
src/sk-agents/demos/07_task_output/: README.md  config.yaml  custom_types.py
src/sk-agents/demos/08_multi_modal/: README.md  config.yaml  config_alt.yaml  custom_types.py  request_payload.json  request_payload_alt.json
src/sk-agents/demos/09_chat_simple/: README.md  config.yaml
src/sk-agents/demos/10_chat_plugins/: README.md  config.yaml  custom_plugins.py
src/sk-agents/demos/ZZ_wikipedia_demo/: custom_plugins.py
src/sk-agents/doc/: chat-completion-factory.md
src/sk-agents/docs/: index.md
src/sk-agents/docs/Code Reference/: reference.md
src/sk-agents/docs/demos/: README.md
src/sk-agents/planning/2507-state-hitl-auth/: 01-teal-agents-overview.md  02-01-state-refactor.md  02-02-state-refactor-implementation-plan.md  02-state-refactor.md  03-01-hitl-baseline.md  03-01-manual-tool-call.md  03-02-manual-tool-call-implementation-plan.md  03-03-hitl-implementation-plan.md  03-state-refactor-implementation-plan.md  04-01-tool-catalog.md  04-02-hitl.md  04-03-hitl-implementation-plan-claude.md  04-manual-tool-call.md  04-prompt.md  05-01-auth-infra-overview.md  05-01-auth-infra.md  05-02-01-prompt.md  05-02-01-secure-auth-storage.md  05-02-tool-catalog-implementation-plan.md  05-manual-tool-call-implementation-plan.md  05-prompt.md
src/sk-agents/src/sk_agents/: __about__.py  __init__.py  a2a_agent_executor.py  a2a_event_handler.py  a2a_types.py  app.py  appv1.py  appv2.py  appv3.py  configs.py  exceptions.py  extra_data_collector.py  plugin_loader.py  routes.py  ska_types.py  stateful.py  type_loader.py  utils.py
src/sk-agents/tests/: conftest.py  test_agent_handler.py  test_agent_handler_v1.py  test_app.py  test_authorizer_factory.py  test_chat_completion_builder.py  test_extra_data_collector.py  test_in_memory_persistence_manager.py  test_kernal_builder.py  test_plugin_loader.py  test_remote_pluging_loader.py  test_routes.py  test_sequential_agent.py  test_type_loader.py  test_utils.py  test_v1alpha1_agent_handler.py  test_v1alpha1_hitl_manager.py
src/sk-agents/tests/custom/: mock_chat_completion_factory.py
src/sk-agents/tests/e2e/: ENVIRONMENT_SETUP.md  README.md  UAT_README.md  mock_gemini_factory.py  simple_test.robot  streamlit_ui_integration.robot  uat_live_system.robot  university_agent_system.robot
src/sk-agents/tests/fixtures/: university_api_responses.json  university_search_responses.json
src/sk-agents/tests/unit/: test_gemini_completion_factory.py  test_university_plugin.py
(+472 files in other folders)
