[project]
name = "ska-utils"
version = "0.1.13"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
