[project]
name = "orchestrator"
version = "0.1.7-beta"
description = "Teal Agents - Orchestrators - Assistant Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi [standard]",
    "python-dotenv",
    "requests",
    "websockets",
    "pydantic",
    "pydantic-yaml",
    "black",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "pynamodb",
    "ska-utils",
    "redis>=5.2.1",
]

[tool.uv.sources]
ska-utils = { path = "../../../../shared/ska_utils" }
