[project]
name = "services"
version = "0.1.6-beta"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi [standard]",
    "python-dotenv",
    "pydantic",
    "pydantic-yaml",
    "black",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "pynamodb",
    "ska-utils",
]

[tool.uv.sources]
ska-utils = { path = "../../../../shared/ska_utils" }
