[project]
name = "services"
dynamic = ["version"]
description = "Teal Agents - Orchestrators - Assistant Orchestrator Services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi [standard]",
    "python-dotenv",
    "pydantic",
    "pydantic-yaml",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "pynamodb",
    "ska-utils",
]

[tool.uv.sources]
ska-utils = { path = "../../../../shared/ska_utils" }

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "coverage",
    "pytest-cov",
    "hatchling",
    "hatch",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["."]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "./__init__.py"
fallback-version = "0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "UP046", # Ignore Generic class `InvokeResponse` uses `Generic` subclass instead of type parameters\
]
isort = { combine-as-imports = true }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
files = [".", "tests/"]
follow_imports = "skip"
python_version = 3.12
overrides = [
  { module = [
    "ska_utils.*",
  ], ignore_missing_imports = true },
]

[tool.coverage.run]
source = ["tests", "."]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_also = [
    # This is only executed while typechecking
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
    "raise NotImplementedError",
    "logger.debug",
]
