[project]
name = "collab-orchestrator"
dynamic = ["version"]
description = "Collaboration orchestrator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi [standard]",
    "python-dotenv",
    "requests",
    "pydantic",
    "pydantic-yaml",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "aiohttp>=3.12.6",
    "ska-utils",
    "redis>=5.2.1",
    "redis[asyncio]>=4.6",
]

[project.urls]
Homepage = "https://github.com/MSDLLCpapers/teal-agents"
Repository = "https://github.com/MSDLLCpapers/teal-agents"

[tool.uv.sources]
ska-utils = { path = "../../../../shared/ska_utils" }

[tool.hatch.build.targets.sdist]
include = [
    "src"
]

[tool.hatch.build.targets.wheel]
packages = ["src/collab_orchestrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/collab_orchestrator/__about__.py"
fallback-version = "0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "coverage",
    "pytest-cov",
    "hatchling",
    "hatch",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
files = ["src/collab_orchestrator/", "tests/"]
follow_imports = "skip"
python_version = 3.13
overrides = [
    { module = [
        "ska_utils.*",
    ], ignore_missing_imports = true },
]

[tool.coverage.run]
source = ["src/collab_orchestrator"]
omit = ["*/tests/*", "test_*", "__init__.py", "__about__.py"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_also = [
    # This is only executed while typechecking
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
    "raise NotImplementedError",
    "logger.debug",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
