[project]
name = "group-orchestrator"
version = "0.1.0"
description = "Group orchestrator with optional planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi [standard]",
    "python-dotenv",
    "requests",
    "pydantic",
    "pydantic-yaml",
    "black",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "ska-utils"
]

[tool.uv.sources]
ska-utils = { path = "../../../../shared/ska_utils" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
